nyah becomes nyu!!

--- a/src/nyu/test/Makefile
+++ b/src/nyu/test/Makefile
@@ -1,16 +1,16 @@
 .PHONY: test accept
 
 outdir = .new.output
-mousedeer = ../.obj/mousedeer/mousedeer
+nyu    = ../.obj/nyu
 
 test: nyah.out
 
-nyah.out: nyah.nyah grammar.nyah ${mousedeer}
+nyah.out: nyah.nyah grammar.nyah ${nyu}
 
 %.out:
 	@rm -rf ${outdir}
 	@mkdir -p ${outdir}
-	@${mousedeer} ${mousedeer_args} -I. -p -o ${outdir} $< > ${outdir}/$@
+	@${nyu} -I. -p -o ${outdir} $< > ${outdir}/$@
 	@for f in ${outdir}/*.out ; do diff `basename $$f` $$f || exit 1 ; done
 	@touch $@
 	@rm ${outdir}/*.out
