use inclusion and grammar include path for self test

--- a/src/nyu/test/Makefile
+++ b/src/nyu/test/Makefile
@@ -2,15 +2,15 @@
 
 nyu    = ../.obj/nyu
 
-test: fail.out nyu.out
+test: fail.out self.out
 
-nyu.out: meta.nyah nyah.nyah nyu.nyah ${nyu}
+self.out: self.nyah ${nyu}
 fail.out: fail.nyah ${nyu}
 
 %.out:
 	@rm -rf .$@
 	@mkdir -p .$@
-	@${nyu} -I. -p -o .$@ $< > .$@/$@
+	${nyu} -I. -I../grammar -p -o .$@ $< > .$@/$@
 	@for f in .$@/*.out ; do diff `basename $$f` $$f || exit 1 ; done
 	@touch $@
 	@rm .$@/*.out
