add class builder

--- a/src/nyu/CMakeLists.txt
+++ b/src/nyu/CMakeLists.txt
@@ -12,8 +12,9 @@ include(Installer)
 include_directories(..)
 add_definitions(-Wall)
 
-add_executable(nyu nyu.cpp cpp/builder.cpp cpp/build_module.cpp
-                   cpp/output_file.cpp options.cpp)
+add_executable(nyu nyu.cpp options.cpp
+               cpp/build_class.cpp cpp/output_file.cpp
+               cpp/builder.cpp cpp/build_module.cpp)
 
 install(TARGETS nyu
         RUNTIME DESTINATION ${BIN_DIR}
