--- a/src/nyu/CMakeLists.txt
+++ b/src/nyu/CMakeLists.txt
@@ -13,8 +13,8 @@ include_directories(..)
 add_definitions(-Wall)
 
 add_executable(nyu nyu.cpp options.cpp
-               cpp/build_class.cpp cpp/output_file.cpp
-               cpp/builder.cpp cpp/build_module.cpp)
+               cpp/build_class.cpp cpp/output_file.cpp cpp/builder.cpp
+               cpp/build_module.cpp cpp/get_type_and_value.cpp)
 
 install(TARGETS nyu
         RUNTIME DESTINATION ${BIN_DIR}
