--- a/src/nyu/CMakeLists.txt
+++ b/src/nyu/CMakeLists.txt
@@ -15,7 +15,8 @@ add_definitions(-Wall)
 add_executable(nyu nyu.cpp options.cpp
                cpp/build_class.cpp cpp/output_file.cpp cpp/builder.cpp
                cpp/build_module.cpp cpp/get_type_and_value.cpp
-               cpp/scope_ref_cache.cpp cpp/build_grammar.cpp)
+               cpp/scope_ref_cache.cpp cpp/build_grammar.cpp
+               cpp/build_rule.cpp)
 
 install(TARGETS nyu
         RUNTIME DESTINATION ${BIN_DIR}
