update website layout and content, add get_class AST search

--- a/src/nyu/CMakeLists.txt
+++ b/src/nyu/CMakeLists.txt
@@ -13,10 +13,10 @@ include_directories(..)
 add_definitions(-Wall)
 
 add_executable(nyu nyu.cpp options.cpp
-               cpp/build_class.cpp cpp/output_file.cpp cpp/builder.cpp
-               cpp/build_module.cpp cpp/get_type_and_value.cpp
-               cpp/compilation_unit.cpp cpp/build_grammar.cpp
-               cpp/get_grammar.cpp cpp/build_rule.cpp)
+               cpp/output_file.cpp cpp/compilation_unit.cpp
+               cpp/builder.cpp cpp/build_class.cpp cpp/build_rule.cpp
+               cpp/build_grammar.cpp cpp/build_module.cpp
+               cpp/get_type_and_value.cpp cpp/get_grammar.cpp cpp/get_class.cpp)
 
 install(TARGETS nyu
         RUNTIME DESTINATION ${BIN_DIR}
