check and process rule parents, all parser files fully generated but nyah.hpp, regenerate target, update docs

--- a/src/nyu/Makefile.local
+++ b/src/nyu/Makefile.local
@@ -1,2 +1,9 @@
+.PHONY: regenerate accept
+
+regenerate:
+	@cp test/.self/nyu/grammar/*.hpp grammar
+	@cp test/.self/nyu/grammar.hpp .
+	@echo regenerated C++ parser and AST from nyah
+
 accept:
 	${MAKE} -C test accept
