use expected output of self test as source through -I

--- a/src/nyu/CMakeLists.txt
+++ b/src/nyu/CMakeLists.txt
@@ -10,6 +10,7 @@ include(C++0x)
 include(Installer)
 
 include_directories(..)
+include_directories(test/self)
 add_definitions(-Wall)
 
 add_executable(nyu nyu.cpp options.cpp
